# ULAC

./: README.md  pyproject.toml
data/patient_01/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_02/: basis_vecs.npy  mesh_endo_raw.vtu  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_03/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_04/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_05/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_06/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
data/patient_07/: basis_vecs.npy  mesh_with_fibers_tags.vtk  mesh_with_fibers_tags.vtu  uac_submesh_data.msgpack
examples/: la_basis.ipynb  la_construction.ipynb  la_mapping.ipynb
examples/260301_experiment/: 260301_experiment.ipynb  dummy_mesh_one_hole.msh
experiment/: 260301_experiment.ipynb  displaced_mesh.vtk  elasticity.ipynb  uac_mesh_1.h5  uac_mesh_1.xdmf
notebooks/: data_exploration.ipynb  la_construction.ipynb  la_mapping.ipynb  ulac.ipynb
notebooks/260301_experiment/: dummy_mesh_one_hole.vtu
notebooks/config/: parameterization.py  workflow.py
notebooks/la_construction_config/: parameterization.py  workflow.py
src/ulac/: __init__.py  basis.py  configuration.py  construction.py  internal.py  mapper.py  serialization.py  utils.py  workflow.py
src/ulac/common/: dict_utils.py  jacobian.py  mesh_utils.py  mvc.py  serialization.py  visualization.py
src/ulac/construction/: api.py  configuration.py  constructor.py  internal.py
src/ulac/mapping/: basis.py  jacobian.py  mapper.py
