[project]
authors = [{ name = "Maximilian Kruse", email = "maxkruse1604@gmail.com" }]
maintainers = [{ name = "Maximilian Kruse", email = "maxkruse1604@gmail.com" }]
description = "Universal Coordinates for the Left Atrium "
name = "ulac"
requires-python = ">=3.13"
dynamic = ["version"]
readme = "README.md"
license = { text = "MIT" }
keywords = ["eikonal equation", "automatic differentiation", "GPU acceleration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
]


# --------------------------------------------------------------------------------------------------
dependencies = [
    "igraph>=1.0.0",
    "libigl>=2.6.1",
    "numba>=0.62.1",
    "numpy>=2.3.4",
    "python-igraph>=1.0.0",
    "pyvista[all]>=0.46.4",
    "trimesh>=4.9.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.2",
]
examples = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]


# --------------------------------------------------------------------------------------------------
[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
environments = ["sys_platform == 'linux'"]
cache-keys = [
  { file = "pyproject.toml" },
  { git = { commit = true, tags = true } },
]
default-groups = []


# --------------------------------------------------------------------------------------------------
[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812",
  "EM101",
  "EM102",
  "FBT001",
  "FBT003",
  "F722",
  "F821",
  "ISC001",
  "PD008",
  "PD011",
  "PLR2004",
  "PT003",
  "RET504",
  "S101",
  "TRY003",
]
per-file-ignores = { "test/*" = ["ANN001", "ANN201", "D100", "D103", "D104", "INP001", "SLF001"] }
pydocstyle.convention = "google"


# --------------------------------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["test"]
addopts = [
  "-v",
  "--import-mode=importlib",
  "--cov=eikonax",
  "--cov-config=.coveragerc",
]
markers = [
  "unit: unit tests",
  "integration: integration tests",
  "compile: requires compilation",
  "slow: tests with long runtime",
]
